--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -21,6 +21,7 @@
             "styleButtonSecondaryVariant": "3",
             "styleBorderRadius": "0px",
             "styleButtonBorderRadius": "0px",
+            "styleInputBorder": true,
             "styleInputBorderRadius": "0px",
             "styleComponentBorderRadius": "0px",
             "styleImageBorderRadius": "0px",
@@ -583,6 +584,7 @@
                 "styleButtonSecondaryVariant": "3",
                 "styleBorderRadius": "0px",
                 "styleButtonBorderRadius": "0px",
+                "styleInputBorder": true,
                 "styleInputBorderRadius": "0px",
                 "styleComponentBorderRadius": "0px",
                 "styleImageBorderRadius": "0px",
