--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -57,6 +57,7 @@
             "style_border_color": "#ececec",
             "style_heading_color": "#1a1b18",
             "style_subheading_color": "#1b188c",
+            "style_overline_color": "#1b188c",
             "style_text_color": "#212326",
             "style_product_title_color": "#1a1b18",
             "style_price_color": "#1a1b18",
@@ -83,12 +84,13 @@
                     "border_color": "#e0e0e0",
                     "heading_color": "#000000",
                     "subheading_color": "#000000",
+                    "overline_color": "#000000",
                     "text_color": "#000000",
                     "link_color": "#000000",
                     "accent_color": "#000000",
                     "icon_color": "#000000",
-                    "btn_bg_color": "#dddddd",
-                    "btn_text_color": "#000000",
+                    "btn_bg_color": "#000000",
+                    "btn_text_color": "#ffffff",
                     "product_title_color": "#000000",
                     "price_color": "#000000",
                     "sale_price_color": "#000000",
@@ -112,12 +114,13 @@
                     "border_color": "#bdbdbd",
                     "heading_color": "#000000",
                     "subheading_color": "#000000",
+                    "overline_color": "#000000",
                     "text_color": "#000000",
                     "link_color": "#000000",
                     "accent_color": "#000000",
                     "icon_color": "#000000",
-                    "btn_bg_color": "#b7b6b6",
-                    "btn_text_color": "#000000",
+                    "btn_bg_color": "#000000",
+                    "btn_text_color": "#ffffff",
                     "product_title_color": "#000000",
                     "price_color": "#000000",
                     "sale_price_color": "#000000",
@@ -141,12 +144,13 @@
                     "border_color": "#575757",
                     "heading_color": "#ffffff",
                     "subheading_color": "#ffffff",
+                    "overline_color": "#ffffff",
                     "text_color": "#ffffff",
                     "link_color": "#ffffff",
                     "accent_color": "#ffffff",
                     "icon_color": "#ffffff",
-                    "btn_bg_color": "#000000",
-                    "btn_text_color": "#ffffff",
+                    "btn_bg_color": "#ffffff",
+                    "btn_text_color": "#000000",
                     "product_title_color": "#ffffff",
                     "price_color": "#ffffff",
                     "sale_price_color": "#ffffff",
@@ -170,12 +174,13 @@
                     "border_color": "#393939",
                     "heading_color": "#ffffff",
                     "subheading_color": "#ffffff",
+                    "overline_color": "#ffffff",
                     "text_color": "#ffffff",
                     "link_color": "#ffffff",
                     "accent_color": "#ffffff",
                     "icon_color": "#ffffff",
-                    "btn_bg_color": "#000000",
-                    "btn_text_color": "#ffffff",
+                    "btn_bg_color": "#ffffff",
+                    "btn_text_color": "#000000",
                     "product_title_color": "#ffffff",
                     "price_color": "#ffffff",
                     "sale_price_color": "#ffffff",
@@ -199,12 +204,13 @@
                     "border_color": "#393939",
                     "heading_color": "#ffffff",
                     "subheading_color": "#ffffff",
+                    "overline_color": "#ffffff",
                     "text_color": "#ffffff",
                     "link_color": "#ffffff",
                     "accent_color": "#ffffff",
                     "icon_color": "#ffffff",
-                    "btn_bg_color": "#434343",
-                    "btn_text_color": "#ffffff",
+                    "btn_bg_color": "#ffffff",
+                    "btn_text_color": "#000000",
                     "product_title_color": "#ffffff",
                     "price_color": "#ffffff",
                     "sale_price_color": "#ffffff",
@@ -238,7 +244,12 @@
             "subheadingLetterSpacing": "3px",
             "subheadingFontWeight": "400",
             "subheadingFontStyle": "normal",
-            "subheadingTextTransform": "normal",
+            "subheadingTransform": "normal",
+            "overlineFont": "Lato",
+            "overlineLetterSpacing": "3px",
+            "overlineFontWeight": "400",
+            "overlineFontStyle": "normal",
+            "overlineTextTransform": "uppercase",
             "buttonFont": "Poppins",
             "buttonLetterSpacing": "1px",
             "buttonFontWeight": "400",
@@ -623,6 +634,7 @@
                 "style_border_color": "#ececec",
                 "style_heading_color": "#1a1b18",
                 "style_subheading_color": "#1b188c",
+                "style_overline_color": "#1b188c",
                 "style_text_color": "#212326",
                 "style_product_title_color": "#1a1b18",
                 "style_price_color": "#1a1b18",
@@ -649,12 +661,13 @@
                         "border_color": "#e0e0e0",
                         "heading_color": "#000000",
                         "subheading_color": "#000000",
+                        "overline_color": "#000000",
                         "text_color": "#000000",
                         "link_color": "#000000",
                         "accent_color": "#000000",
                         "icon_color": "#000000",
-                        "btn_bg_color": "#dddddd",
-                        "btn_text_color": "#000000",
+                        "btn_bg_color": "#000000",
+                        "btn_text_color": "#ffffff",
                         "product_title_color": "#000000",
                         "price_color": "#000000",
                         "sale_price_color": "#000000",
@@ -678,12 +691,13 @@
                         "border_color": "#bdbdbd",
                         "heading_color": "#000000",
                         "subheading_color": "#000000",
+                        "overline_color": "#000000",
                         "text_color": "#000000",
                         "link_color": "#000000",
                         "accent_color": "#000000",
                         "icon_color": "#000000",
-                        "btn_bg_color": "#b7b6b6",
-                        "btn_text_color": "#000000",
+                        "btn_bg_color": "#000000",
+                        "btn_text_color": "#ffffff",
                         "product_title_color": "#000000",
                         "price_color": "#000000",
                         "sale_price_color": "#000000",
@@ -707,12 +721,13 @@
                         "border_color": "#575757",
                         "heading_color": "#ffffff",
                         "subheading_color": "#ffffff",
+                        "overline_color": "#ffffff",
                         "text_color": "#ffffff",
                         "link_color": "#ffffff",
                         "accent_color": "#ffffff",
                         "icon_color": "#ffffff",
-                        "btn_bg_color": "#000000",
-                        "btn_text_color": "#ffffff",
+                        "btn_bg_color": "#ffffff",
+                        "btn_text_color": "#000000",
                         "product_title_color": "#ffffff",
                         "price_color": "#ffffff",
                         "sale_price_color": "#ffffff",
@@ -736,12 +751,13 @@
                         "border_color": "#393939",
                         "heading_color": "#ffffff",
                         "subheading_color": "#ffffff",
+                        "overline_color": "#ffffff",
                         "text_color": "#ffffff",
                         "link_color": "#ffffff",
                         "accent_color": "#ffffff",
                         "icon_color": "#ffffff",
-                        "btn_bg_color": "#000000",
-                        "btn_text_color": "#ffffff",
+                        "btn_bg_color": "#ffffff",
+                        "btn_text_color": "#000000",
                         "product_title_color": "#ffffff",
                         "price_color": "#ffffff",
                         "sale_price_color": "#ffffff",
@@ -765,12 +781,13 @@
                         "border_color": "#393939",
                         "heading_color": "#ffffff",
                         "subheading_color": "#ffffff",
+                        "overline_color": "#ffffff",
                         "text_color": "#ffffff",
                         "link_color": "#ffffff",
                         "accent_color": "#ffffff",
                         "icon_color": "#ffffff",
-                        "btn_bg_color": "#434343",
-                        "btn_text_color": "#ffffff",
+                        "btn_bg_color": "#ffffff",
+                        "btn_text_color": "#000000",
                         "product_title_color": "#ffffff",
                         "price_color": "#ffffff",
                         "sale_price_color": "#ffffff",
@@ -805,6 +822,11 @@
                 "subheadingFontWeight": "400",
                 "subheadingFontStyle": "normal",
                 "subheadingTextTransform": "normal",
+                "overlineFont": "Lato",
+                "overlineLetterSpacing": "3px",
+                "overlineFontWeight": "400",
+                "overlineFontStyle": "normal",
+                "overlineTextTransform": "uppercase",
                 "buttonFont": "Poppins",
                 "buttonLetterSpacing": "1px",
                 "buttonFontWeight": "400",
