--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -92,7 +92,7 @@
             "subheadingLetterSpacing": "3px",
             "subheadingFontWeight": "400",
             "subheadingFontStyle": "normal",
-            "subheadingTransform": "normal",
+            "subheadingTextTransform": "normal",
             "overlineFont": "Open Sans",
             "overlineLetterSpacing": "1px",
             "overlineFontWeight": "400",
@@ -934,7 +934,7 @@
                 "subheadingLetterSpacing": "3px",
                 "subheadingFontWeight": "400",
                 "subheadingFontStyle": "normal",
-                "subheadingTransform": "normal",
+                "subheadingTextTransform": "normal",
                 "overlineFont": "Open Sans",
                 "overlineLetterSpacing": "1px",
                 "overlineFontWeight": "400",
