--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -17,9 +17,21 @@
             "styleGridContainerPaddingX": "0.714275rem",
             "styleGridGutterWidth": "1.42855rem",
             "styleIconStrokeWidth": "1.5px",
+            "styleFormFloatingHeight": "2.90rem",
+            "styleFormFloatingLineHeight": "1.25",
+            "styleFormFloatingPaddingY": "0.8rem",
+            "styleFormFloatingPaddingX": "1rem",
+            "styleFormFloatingInputPaddingT": "1.525rem",
+            "styleFormFloatingInputPaddingB": "0.525rem",
+            "styleFormFloatingLabelHeight": "1.5em",
+            "styleInputBtnPaddingY": "0.8rem",
+            "styleInputBtnPaddingX": "1rem",
+            "styleBtnPaddingY": "0.8rem",
+            "styleBtnPaddingX": "1.6rem",
             "styleCartVariant": "3",
             "styleProductBadgePosition": "top-start",
             "styleAnnouncementHeight": "2.6rem",
+            "styleAnnouncementFontScale": "0.9",
             "styleButtonPrimaryVariant": "2",
             "styleButtonSecondaryVariant": "3",
             "styleBorderRadius": "0px",
@@ -29,10 +41,10 @@
             "styleComponentBorderRadius": "0px",
             "styleImageBorderRadius": "0px",
             "styleProductImageBorderRadius": "0px",
-            "sectionPaddingTop": "2.6rem",
-            "sectionPaddingBottom": "2.6rem",
-            "sectionInnerGap": "2.1rem",
-            "sectionHeaderGapScale": "2",
+            "sectionPaddingTop": "4.5rem",
+            "sectionPaddingBottom": "4.5rem",
+            "sectionInnerGap": "3.5rem",
+            "sectionHeaderGapScale": "1.7",
             "sectionBgImgPos": "center-center",
             "sectionOverlay": "",
             "sectionOverlayPadding": "2.25rem",
@@ -859,9 +871,21 @@
                 "styleGridContainerPaddingX": "0.714275rem",
                 "styleGridGutterWidth": "1.42855rem",
                 "styleIconStrokeWidth": "1.5px",
+                "styleFormFloatingHeight": "2.90rem",
+                "styleFormFloatingLineHeight": "1.25",
+                "styleFormFloatingPaddingY": "0.8rem",
+                "styleFormFloatingPaddingX": "1rem",
+                "styleFormFloatingInputPaddingT": "1.525rem",
+                "styleFormFloatingInputPaddingB": "0.525rem",
+                "styleFormFloatingLabelHeight": "1.5em",
+                "styleInputBtnPaddingY": "0.8rem",
+                "styleInputBtnPaddingX": "1rem",
+                "styleBtnPaddingY": "0.8rem",
+                "styleBtnPaddingX": "1.6rem",
                 "styleCartVariant": "3",
                 "styleProductBadgePosition": "top-start",
                 "styleAnnouncementHeight": "2.6rem",
+                "styleAnnouncementFontScale": "0.9",
                 "styleButtonPrimaryVariant": "2",
                 "styleButtonSecondaryVariant": "3",
                 "styleBorderRadius": "0px",
@@ -871,10 +895,10 @@
                 "styleComponentBorderRadius": "0px",
                 "styleImageBorderRadius": "0px",
                 "styleProductImageBorderRadius": "0px",
-                "sectionPaddingTop": "2.6rem",
-                "sectionPaddingBottom": "2.6rem",
-                "sectionInnerGap": "2.1rem",
-                "sectionHeaderGapScale": "2",
+                "sectionPaddingTop": "4.5rem",
+                "sectionPaddingBottom": "4.5rem",
+                "sectionInnerGap": "3.5rem",
+                "sectionHeaderGapScale": "1.7",
                 "sectionBgImgPos": "center-center",
                 "sectionOverlay": "",
                 "sectionOverlayPadding": "2.25rem",
