--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -82,6 +82,8 @@
             "style_new_badge_text_color": "#ffffff",
             "style_discount_badge_bg_color": "#ec7749",
             "style_discount_badge_text_color": "#ffffff",
+            "style_promotion_badge_bg_color": "#ec7749",
+            "style_promotion_badge_text_color": "#ffffff",
             "style_review_icon_color": "#e5b237",
             "style_table_bg_color": "#ffffff",
             "style_table_text_color": "#1e1816",
@@ -936,6 +938,8 @@
                 "style_new_badge_text_color": "#ffffff",
                 "style_discount_badge_bg_color": "#ec7749",
                 "style_discount_badge_text_color": "#ffffff",
+                "style_promotion_badge_bg_color": "#ec7749",
+                "style_promotion_badge_text_color": "#ffffff",
                 "style_review_icon_color": "#e5b237",
                 "style_table_bg_color": "#ffffff",
                 "style_table_text_color": "#1e1816",
