--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -250,7 +250,7 @@
                                     "announcementLink": {
                                         "type": "url",
                                         "record_id": "15609558",
-                                        "text": "Ilmainen toimitus yli 100\u20ac tilauksille.",
+                                        "text": "Ilmainen toimitus yli 100 \u20ac tilauksille.",
                                         "url": "\/tuotteet",
                                         "target": "_self"
                                     }
@@ -375,7 +375,8 @@
                             "sectionPaddingMode": "auto",
                             "sectionPaddingTop": "0",
                             "sectionPaddingBottom": "0",
-                            "sectionHeight": "100"
+                            "sectionHeight": "100",
+                            "sectionHeightMobile": "70"
                         },
                         "blocks": []
                     },
@@ -725,7 +726,8 @@
                             "sectionPaddingMode": "auto",
                             "sectionPaddingTop": "0",
                             "sectionPaddingBottom": "0",
-                            "sectionMinHeight": "80"
+                            "sectionMinHeight": "80",
+                            "sectionMinHeightMobile": "50"
                         },
                         "blocks": []
                     },
@@ -1065,7 +1067,8 @@
                             "sectionPaddingMode": "auto",
                             "sectionPaddingTop": "0",
                             "sectionPaddingBottom": "0",
-                            "sectionHeight": "80"
+                            "sectionHeight": "80",
+                            "sectionHeightMobile": "50"
                         },
                         "blocks": []
                     },
@@ -1516,7 +1519,7 @@
                         "blocks": [],
                         "settings": {
                             "detailsFreeShippingLimit": "100",
-                            "detailsShippingAndReturnRichtext": "<p id=\"isPasted\"><strong>Ilmainen toimitus yli 100&euro; tilauksille!<\/strong><\/p><p>Nauti ilmaisesta toimituksesta, kun tilauksesi ylitt&auml;&auml; 100&euro;! Kaikkiin pienempiin tilauksiin lis&auml;t&auml;&auml;n standardi toimitusmaksu, joka n&auml;ytet&auml;&auml;n kassalla.<\/p><p><strong>Aina ilmainen palautus!<\/strong><\/p><p>Meille on t&auml;rke&auml;&auml;, ett&auml; olet tyytyv&auml;inen ostoksiisi. Siksi tarjoamme aina ilmaisen palautuksen, mik&auml;li haluat vaihtaa tai palauttaa tuotteen. Palautusoikeus on voimassa 30 p&auml;iv&auml;&auml; tilauksen vastaanottamisesta.<\/p>",
+                            "detailsShippingAndReturnRichtext": "<p id=\"isPasted\"><strong>Ilmainen toimitus yli 100 &euro; tilauksille!<\/strong><\/p><p>Nauti ilmaisesta toimituksesta, kun tilauksesi ylitt&auml;&auml; 100 &euro;! Kaikkiin pienempiin tilauksiin lis&auml;t&auml;&auml;n standardi toimitusmaksu, joka n&auml;ytet&auml;&auml;n kassalla.<\/p><p><strong>Aina ilmainen palautus!<\/strong><\/p><p>Meille on t&auml;rke&auml;&auml;, ett&auml; olet tyytyv&auml;inen ostoksiisi. Siksi tarjoamme aina ilmaisen palautuksen, mik&auml;li haluat vaihtaa tai palauttaa tuotteen. Palautusoikeus on voimassa 30 p&auml;iv&auml;&auml; tilauksen vastaanottamisesta.<\/p>",
                             "detailsPaymentRichtext": "<p id=\"isPasted\">Turvallista ostamista!<\/p><p>Meille on t&auml;rke&auml;&auml;, ett&auml; ostokokemuksesi on sek&auml; miellytt&auml;v&auml; ett&auml; turvallinen. Siksi tarjoamme laajan valikoiman suosituimpia ja luotettavia maksutapoja:<br><br><\/p><ul><li><strong>Verkkopankit<\/strong>: Maksa suoraan omasta verkkopankistasi.<\/li><li><strong>Korttimaksut<\/strong>: Maksa k&auml;tev&auml;sti Visa, MasterCard tai American Express -korteilla.<\/li><li><strong>Klarna<\/strong>: Osta Klarnalla, jolloin voit p&auml;&auml;tt&auml;&auml; maksatko heti, my&ouml;hemmin tai osissa.<\/li><\/ul>",
                             "showBreadcrumbs": true,
                             "showBuyNowButton": true,
@@ -1875,7 +1878,8 @@
                             "sectionPaddingMode": "auto",
                             "sectionPaddingTop": "0",
                             "sectionPaddingBottom": "0",
-                            "sectionMinHeight": "60"
+                            "sectionMinHeight": "60",
+                            "sectionMinHeightMobile": "40"
                         },
                         "blocks": []
                     }
@@ -2260,7 +2264,8 @@
                             "sectionPaddingMode": "auto",
                             "sectionPaddingTop": "0",
                             "sectionPaddingBottom": "0",
-                            "sectionHeight": "60"
+                            "sectionHeight": "60",
+                            "sectionHeightMobile": "60"
                         },
                         "blocks": []
                     },
@@ -2423,7 +2428,8 @@
                             "sectionPaddingMode": "auto",
                             "sectionPaddingTop": "0",
                             "sectionPaddingBottom": "0",
-                            "sectionHeight": "40"
+                            "sectionHeight": "40",
+                            "sectionHeightMobile": "40"
                         },
                         "blocks": []
                     },
@@ -3040,7 +3046,8 @@
                                 "sectionPaddingMode": "auto",
                                 "sectionPaddingTop": "0",
                                 "sectionPaddingBottom": "0",
-                                "sectionHeight": "100"
+                                "sectionHeight": "100",
+                                "sectionHeightMobile": "70"
                             },
                             "blocks": []
                         },
