--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -134,6 +134,7 @@
             "accessibilityShowWishlist": true,
             "cartShowAddNotification": true,
             "taxFreeShopping": false,
+            "cookiesPolicyMode": "simple",
             "cookiesPolicyPosition": "middle",
             "productImageAspectRatio": "3:4",
             "productImageAspectRatioFit": "cover",
@@ -164,7 +165,6 @@
             "registerCompanyInformation": false,
             "registerAdditionalInformation": false,
             "showPolicyAgreementAsText": false,
-            "klarnaClientId": "",
             "facebookPageUrl": "#",
             "instagramPageUrl": "#",
             "xPageUrl": "#",
@@ -1531,6 +1531,7 @@
                             "showProductCustomizationPrice": true,
                             "showProductCustomizationTotalPrice": false,
                             "showProductCustomizationStockBalance": false,
+                            "showSimpleProductCustomizationInputElements": true,
                             "customDisplayInformation": false,
                             "showManufacturer": true,
                             "showPromotion": true,
@@ -2841,6 +2842,7 @@
                 "accessibilityShowWishlist": true,
                 "cartShowAddNotification": true,
                 "taxFreeShopping": false,
+                "cookiesPolicyMode": "simple",
                 "cookiesPolicyPosition": "middle",
                 "productImageAspectRatio": "3:4",
                 "productImageAspectRatioFit": "cover",
@@ -2871,7 +2873,6 @@
                 "registerCompanyInformation": false,
                 "registerAdditionalInformation": false,
                 "showPolicyAgreementAsText": false,
-                "klarnaClientId": "",
                 "facebookPageUrl": "",
                 "instagramPageUrl": "",
                 "xPageUrl": "",
