--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -158,6 +158,7 @@
             "productWrapName": false,
             "productShowAddToCart": true,
             "productShowStockBalance": false,
+            "productShowSku": false,
             "articleImageAspectRatio": "4:3",
             "articleImageAspectRatioFit": "cover",
             "articlePerRow": "3",
@@ -2866,6 +2867,7 @@
                 "productWrapName": false,
                 "productShowAddToCart": true,
                 "productShowStockBalance": false,
+                "productShowSku": false,
                 "articleImageAspectRatio": "4:3",
                 "articleImageAspectRatioFit": "cover",
                 "articlePerRow": "3",
