--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -155,6 +155,7 @@
             "productShowDiscountBadge": true,
             "productShowOutOfStockBadge": true,
             "productShowDiscountPercentage": true,
+            "productFloorDiscountPercentage": true,
             "productWrapName": false,
             "productShowAddToCart": true,
             "productShowStockBalance": false,
@@ -2864,6 +2865,7 @@
                 "productShowDiscountBadge": true,
                 "productShowOutOfStockBadge": true,
                 "productShowDiscountPercentage": true,
+                "productFloorDiscountPercentage": true,
                 "productWrapName": false,
                 "productShowAddToCart": true,
                 "productShowStockBalance": false,
