--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1526,6 +1526,7 @@
                             "showBreadcrumbs": true,
                             "showBuyNowButton": true,
                             "showQuantitySelect": false,
+                            "showQuantityUnit": false,
                             "showProductQuestionForm": true,
                             "openProductDescriptionByDefault": true,
                             "showLowestPrice": true,
