--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -158,7 +158,7 @@
             "productShowBackorderBadge": true,
             "productShowDiscountPercentage": true,
             "productFloorDiscountPercentage": true,
-            "productWrapName": false,
+            "productTruncateName": true,
             "productShowAddToCart": true,
             "productShowStockBalance": false,
             "productShowStockBalanceAsNumber": false,
@@ -2878,7 +2878,7 @@
                 "productShowBackorderBadge": true,
                 "productShowDiscountPercentage": true,
                 "productFloorDiscountPercentage": true,
-                "productWrapName": false,
+                "productTruncateName": true,
                 "productShowAddToCart": true,
                 "productShowStockBalance": false,
                 "productShowStockBalanceAsNumber": false,
